Add routing page

--- a/BlazorRevealed/BlazorRevealed.Client/Shared/NavMenu.razor
+++ b/BlazorRevealed/BlazorRevealed.Client/Shared/NavMenu.razor
@@ -16,6 +16,7 @@
         <NavMenuItem Href="lifecycle" Text="Lifecycle" />
         <NavMenuItem Href="notifications" Text="Notifications" />
         <NavMenuItem Href="test" Text="Test" />
+        <NavMenuItem Href="routing/some-thing" Text="Routing" />
     </ul>
 </div>
 
