--- a/BlazorRevealed/BlazorRevealed.Client/Shared/NavMenu.razor
+++ b/BlazorRevealed/BlazorRevealed.Client/Shared/NavMenu.razor
@@ -17,6 +17,7 @@
         <NavMenuItem Href="notifications" Text="Notifications" />
         <NavMenuItem Href="test" Text="Test" />
         <NavMenuItem Href="routing/some-thing" Text="Routing" />
+        <NavMenuItem Href="tabs" Text="Tabs" />
     </ul>
 </div>
 
