--- a/BlazorRevealed/BlazorRevealed.Client/Shared/NavMenu.razor
+++ b/BlazorRevealed/BlazorRevealed.Client/Shared/NavMenu.razor
@@ -16,7 +16,7 @@
         <NavMenuItem Href="lifecycle" Text="Lifecycle" />
         <NavMenuItem Href="notifications" Text="Notifications" />
         <NavMenuItem Href="test" Text="Test" />
-        <NavMenuItem Href="routing/some-thing" Text="Routing" />
+        <NavMenuItem Href="routing/1234" Text="Routing" />
         <NavMenuItem Href="tabs" Text="Tabs" />
     </ul>
 </div>
