--- a/BlazorRevealed/BlazorRevealed.Client/Components/Interactive/LoginDisplay.razor
+++ b/BlazorRevealed/BlazorRevealed.Client/Components/Interactive/LoginDisplay.razor
@@ -3,10 +3,10 @@
 <AuthorizeView>
     <Authorized>
         <p>Hello, @context.User.Identity.Name!</p>
-        <p><a href="LogOut">Log out</a></p>
+        <button class="btn btn-sm btn-outline-dark" @onclick="@(() => AuthService.Logout())">Logout</button>
     </Authorized>
     <NotAuthorized>
         <p><a href="Register">Register</a></p>
         <p><a href="Login">Log in</a></p>
-</NotAuthorized>
+    </NotAuthorized>
 </AuthorizeView>
